	    Scientific numbers from a possibly non-normalized coefficient and the
	    number of trailing 0s in the coefficient.

	  When parsing Scientifics it's advisable to count the number of trailing 0s in the
	  coefficient and passing that to `unsafeScientificFromNonNormalized`. This is more
	  efficient than using `scientific` because no expensive normalization has to be
	  performed.

	* Make / on Scientifics slightly more efficient.

0.3.6.2
	* Due to a regression introduced in 0.3.4.14 the RealFrac methods
	and floatingOrInteger became vulnerable to a space blowup when
	applied to scientifics with huge exponents. This has now been
	fixed again.

0.3.6.1
	* Fix build on GHC < 8.

0.3.6.0
	* Make the methods of the Hashable, Eq and Ord instances safe to
	use when applied to scientific numbers coming from untrusted
	sources. Previously these methods first converted their arguments
	to Rational before applying the operation. This is unsafe because
	converting a Scientific to a Rational could fill up all space and
	crash your program when the Scientific has a huge base10Exponent.

	Do note that the hash computation of the Hashable Scientific
	instance has been changed because of this improvement!

	Thanks to Tom Sydney Kerckhove (@NorfairKing) for pushing me to
	fix this.

	* fromRational :: Rational -> Scientific now throws an error
	instead of diverging when applied to a repeating decimal. This
	does mean it will consume space linear in the number of digits of
	the resulting scientific. This makes "fromRational" and the other
	Fractional methods "recip" and "/" a bit safer to use.

	* To get the old unsafe but more efficient behaviour the following
	function was added: unsafeFromRational :: Rational -> Scientific.

	* Add alternatives for fromRationalRepetend:

	  fromRationalRepetendLimited
	      :: Int -- ^ limit
	      -> Rational
	      -> Either (Scientific, Rational)
		        (Scientific, Maybe Int)

	  and:

	  fromRationalRepetendUnlimited