@@ -17,6 +17,8 @@
 	  efficient than using `scientific` because no expensive normalization has to be
 	  performed.
 
+	* Provide toUnboundedInteger :: Scientific -> Maybe Integer
+
 	* Make / on Scientifics slightly more efficient.
 
 0.3.6.2
